tweaking placement in non-mobile view, preventing overlap of nav boxes

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -41,10 +41,9 @@
 }
 
 .center_menu {
-  position: sticky; 
+  position: absolute;
   top: 0;
   left: 50%;
   z-index: 1;
-  display: flex; 
-  justify-content: center;
+  transform: translateX(-50%);
 }
